--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <button type="button" class="btn btn-primary ml-2 my-3">Phoenix Fire Website</button>
                 </a>
                 <a href="files/Resume.pdf" download="Anthony-Resume" target="_blank">
-                  <button type="button" class="btn btn-primary ml-2 my-3">Download My Resume</button>
+                  <button type="button" class="btn btn-primary ml-2 my-3" style="text-decoration: line-through;">Download My Resume</button>
                   </a>
                 <a href="https://liquidflowprops.wixsite.com/liquidflowprops" target="_blank">
                   <button type="button" class="btn btn-primary ml-2 my-3">Liquid Flow Website</button>
@@ -238,7 +238,7 @@
     <!--Project2-->
       <div class="col-lg-4 my-2">
         <div class="">CV Website</div>
-        <a href="https://github.com/techx-guy/CV-Website/" target="_blank" draggable="false">
+        <a href="https://github.com/techx-guy/Portfolio-Site-Project" target="_blank" draggable="false">
           <img src="img/My Site Splash.png" alt="github project 2" class="project1 pb-2" draggable="false">
         </a>
       </div>
