--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <title>Tech X Guy</title>
     <!--TODO
     - New About Me Photo
+    - better splash image all devices
+    - show navbar on scroll up mobile / blurred navbar / center nav text? left align?
+    - bigger buttons mobile
+    - move phoenix and liquid flow to portfolio
+    - css animation circle overlay like google buds
     - add in real resume file
     -->
   </head>
