--- a/index.html
+++ b/index.html
@@ -7,16 +7,36 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Fav icon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="img/favicon_io/site.webmanifest">
+    <link href="splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexr_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexsmax_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta property="og:site_name" content="Tech X Guy" />
+    <meta property=“og:title” content="Tech X Guy" />
+    <meta property="og:description" content="I solve technical problems and teach people skills to make their lives easier" />
+    <meta property="og:url" content="https://www.techxguy.com" />
+    <meta property="og:image" content="splashscreens/ipad_splash.png" />
+    <meta property="og:image:secure_url" content="splashscreens/ipad_splash.png" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="640" />
     <title>Tech X Guy</title>
     <!--TODO
     - New About Me Photo
     - better splash image all devices
+    - og image/text
     - show navbar on scroll up mobile / blurred navbar / center nav text? left align?
     - bigger buttons mobile
     - move phoenix and liquid flow to portfolio
@@ -26,7 +46,7 @@
     -->
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark py-0">
+    <nav class="navbar navbar-expand-lg navbar-dark py-0">
       <a class="navbar-brand" href="#home">
         <img src="img/penrose-outline-white.png" width="60" height="60" class="d-inline-block align-middle logo1" alt="logo">
         <span>Tech X Guy</span>
@@ -76,7 +96,7 @@
         <h4 class="fade-in-delay show-on-scroll">I am a Tech Support Specialist, Repair Technician, Fire Performer and Aspiring Web Developer</h4>
       </div>
       <div class="intro2">
-        <h4 class="fade-in-delay2 show-on-scroll">I solve technical problems and teach people skills to make their live's easier</h4>
+        <h4 class="fade-in-delay2 show-on-scroll">I solve technical problems and teach people skills to make their lives easier</h4>
       </div>
     
     <a href="#about">
