--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h1 class="display-4 hello">Hi, I'm Anthony</h1>
           <p class="lead fade-in-delay show-on-scroll intro">I am a Tech Support Specialist, Repair Technician, Fire Performer and Aspiring Web Developer</p><br>
           <p class="lead fade-in-delay2 show-on-scroll intro2">I solve technical problems and teach people skills to make their lives easier</p><br>
-          <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3" href="#about" role="button">Learn more</a>
+          <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3 show-on-scroll" href="#about" role="button">Learn more</a>
         </div>
       </div>
     </div>
