--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <meta property="og:site_name" content="Tech X Guy" />
     <meta property=“og:title” content="Tech X Guy" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="I solve technical problems and teach people skills to make their lives easier" />
+    <meta name="description" content="I solve technical problems and teach people skills to make their lives easier" />
     <meta property="og:url" content="https://www.techxguy.com" />
     <meta property="og:image" content="splashscreens/iphonexr_splash.png" />
     <meta property="og:image:secure_url" content="splashscreens/iphonexr_splash.png" />
     <meta property="og:image:width" content="1280" />
-    <meta property="og:image:height" content="640" />
+    <meta property="og:image:height" content="220" />
     <title>Tech X Guy</title>
     <!--TODO
     - New About Me Photo
