--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <meta property="og:type" content="website" />
     <meta name="description" content="I solve technical problems and teach people skills to make their lives easier" />
     <meta property="og:url" content="https://www.techxguy.com" />
-    <meta property="og:image" content="og-img.png" />
+    <meta property="og:image" content="img/og-img.png" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
-    <title>Tech X Guy - I solve technical problems and teach people skills to make their lives easier</title>
+    <title>Tech X Guy-Solving problems and teaching people skills to make their lives easier</title>
     <!--TODO
     - New About Me Photo
     - move phoenix and liquid flow to portfolio
