--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:image" content="img/og-image.png" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
-    <title>Tech X Guy - Solving problems and teaching people skills to make their lives easier</title>
+    <title>Tech X Guy -- Solving problems and teaching people skills to make their lives easier</title>
     <!--TODO
     - New About Me Photo
     - move phoenix and liquid flow to portfolio
