--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta property="og:site_name" content="Tech X Guy" />
-    <meta property=“og:title” content="Tech X Guy - Solving problems and teaching people skills to make their lives easier" />
+    <meta property=“og:title” content="Solving problems and teaching people skills to make their lives easier" />
     <meta property="og:type" content="website" />
     <meta name="description" content="I solve technical problems and teach people skills to make their lives easier" />
     <meta property="og:url" content="https://www.techxguy.com" />
