--- a/index.html
+++ b/index.html
@@ -470,14 +470,12 @@
 <!--Smooth Scroll ALl Browsers jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/smooth-scroll.min.js"></script>
-  <!--autoclose mobile navbar-->
-  <!-- <script src="js/nav_close.min.js"></script> -->
   <!--Animations on scroll-->
   <script src="js/show-on-scroll.min.js"></script>
   <!--darkmode script-->
-  <script src="js/dark-mode-switch.js"></script>
+  <script src="js/dark-mode-switch.min.js"></script>
   <!--Autohide navbar-->
-  <script src="js/autohide-clean.js"></script>
+  <script src="js/autohide-clean.min.js"></script>
   </body>
   <footer>
     <div class="footer-text">Face Photos by <a href="https://generated.photos/">Generated Photos</a></div>
