--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <meta property="og:image" content="img/og-image.png" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
-    <title>Tech X Guy</title>
+    <title>Tech X Guy -- Technology Simplified</title>
     <!--TODO
     - New About Me Photo
+    - blurbs about services / simplify
     - move phoenix and liquid flow to portfolio
     - css animation circle/ slide/ wipe/ overlay like google buds
     - reorder testimonials
