--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Fav icon -->
     <link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png" />
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png" /> -->
     <link rel="apple-touch-icon" sizes="240x240" href="img/favicon_io/apple-touch-icon-240x240.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png" />
