--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       <div class="jumbotron hero_content">
         <div class="container">
           <h1 class="display-4 hello">Hi, I'm Anthony</h1>
-          <p class="lead fade-in-delay show-on-scroll intro">I am a Tech Support Specialist, Repair Technician, Fire Performer and Aspiring Web Developer</p><br>
-          <p class="lead fade-in-delay2 show-on-scroll intro2">I solve technical problems and teach people skills to make their lives easier</p><br>
+          <p class="lead fade-in-delay show-on-scroll intro">I am a Tech Support Specialist, Repair Technician, Fire Performer and Aspiring Web Developer</p>
+          <p class="lead fade-in-delay2 show-on-scroll intro2">I solve technical problems and teach people skills to make their lives easier</p>
           <a class="btn btn-primary btn-lg p-2 mt-5 fade-in-delay3 show-on-scroll" href="#about" role="button">Learn more</a>
         </div>
       </div>
