--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="apple-mobile-web-app-title" content="Tech X Guy">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta property="og:site_name" content="Tech X Guy" />
     <meta property=“og:title” content="Solving problems and teaching people skills to make their lives easier" />
     <meta property="og:type" content="website" />
@@ -46,7 +48,7 @@
     - add in real resume file
     -->
   </head>
-  <body>
+  <body ontouchstart=””>
     <header></header>
     <div class="hero" id="home">
       <nav class="navbar navbar-expand-lg navbar-dark py-0 autohide fixed-top" id="navbar">
