--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Fav icon -->
     <link rel="shortcut icon" href="img/favicon_io/favicon.ico" />
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png" /> -->
@@ -27,6 +27,15 @@
     <link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    
+    <link href="/splashscreens/ipadpro2_splash.png" sizes="2048x2732" rel="apple-touch-startup-image" />
+    <link href="/splashscreens/ipadpro3_splash.png" sizes="1668x2224" rel="apple-touch-startup-image" />
+    <link href="/splashscreens/ipadpro1_splash.png" sizes="1536x2048" rel="apple-touch-startup-image" />
+    <link href="/splashscreens/iphonex_splash.png" sizes="1125x2436" rel="apple-touch-startup-image" />
+    <link href="/splashscreens/iphoneplus_splash.png" sizes="1242x2208" rel="apple-touch-startup-image" />
+    <link href="/splashscreens/iphone6_splash.png"  sizes="750x1334"  rel="apple-touch-startup-image" />
+    <link href="/splashscreens/iphone5_splash.png"  sizes="640x1136"  rel="apple-touch-startup-image" />
+    
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="apple-mobile-web-app-title" content="Tech X Guy">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
